[package]
name = "r-utils"
version = "0.0.0-dev1"
edition = "2021"
license = "MIT"
description = "common utils functions in rust"


[lib]
name = "r_utils"
path = "src/lib.rs"


[dependencies]
dotenv = {version = "0"}
clap = {version = "4", features = ["derive"]}
serde = "1"
serde_json = "1"


# s3
aws-config = {version = "0", optional = true}
aws-sdk-s3 = {version = "0", optional = true}
chrono = {version = "0", optional = true}

# s3-sync
tokio = {version = "1", features = ["macros"] , optional = true}
curl = {version = "0", optional = true}


# mfa
totp-rs = {version = "5", features = ["qr"], optional = true}

[features]
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:chrono"]
s3-sync = ["s3", "dep:tokio", "dep:curl"]
mfa = ["dep:totp-rs"]
