[package]
name = "r-utils"
version = "0.0.0-dev1"
edition = "2021"
license = "MIT"
description = "common utils functions in rust"


[lib]
name = "r_utils"
path = "src/lib.rs"


[dependencies]
dotenv = {version = "0"}
clap = {version = "4", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}

# s3
aws-config = {version = "0", optional = true}
aws-sdk-s3 = {version = "0", optional = true}
chrono = {version = "0", optional = true}

# s3-sync
curl = {version = "0", optional = true}


# mfa
totp-rs = {version = "5", features = ["qr"], optional = true}

[features]
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:chrono"]
s3-sync = ["s3", "dep:curl"]
mfa = ["dep:totp-rs"]
