[package]
name = "r-utils"
version = "0.0.0-dev8"
edition = "2021"
license = "MIT"
description = "common utils functions in rust"
repository = "https://github.com/claudezss/r-utils"
readme = "README.md"
keywords = ["utils", "examples"]


[features]
full = ["s3", "mfa", "cli"]
s3 = ["aws-config", "aws-sdk-s3", "chrono"]
mfa = ["totp-rs"]
cli = ["clap", "curl", "notify", "s3"]


[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
dotenv = {version = "0"}
tokio = {version = "1", features = ["full"]}

# s3
aws-config = {version = "0", optional = true}
aws-sdk-s3 = {version = "0", optional = true}
chrono = {version = "0", optional = true}

# mfa
totp-rs = {version = "5", features = ["qr"], optional = true}

# cli
clap = {version = "4", features = ["derive"], optional = true}
curl = {version = "0", optional = true}
notify = { version = "6", features = ["serde"], optional = true}

[badges]
maintenance = { status = "actively-developed" }
